Updated the homepage to display the name of 3 popular locations and some info/things to do at each location.

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,9 +3,11 @@
 {% block content %}
 
 <ul>
-    <li><a style="color:white;">Trip Planner</a></li>
+    <li><sitename style="color:white;">Travel Pal</sitename></li>
   <li><a href="/">Home</a></li>
   <li><a class="active">About</a></li>
   <li><input type="text" placeholder="Search.." ></li>
 </ul>
+
+    <h1 align="center">About Travel Pal</h1>
 {% endblock %}
