--- a/templates/template.html
+++ b/templates/template.html
@@ -22,6 +22,15 @@
         {
             float: left;
         }
+        li sitename
+        {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size:18px;
+        }
 
         li a
         {
