city names are now clickable buttons but currently do not have any function

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
     <li><a href="about">About</a></li>
     <li><input type="text" placeholder="Search.." ></li>
 </ul>
-        <h1 align="center">Popular Destinations</h1>
+        {# <h1 align="center">Popular Destinations</h1> #}
 
     <div class="column">
       <h2>{{ location1 }}</h2>
