Added navbar to city.html, search bar in the navbar now allows you to search for popular cities with a state and country, however, searching while you're in the about page current causes url issues and needs to be worked out later.

--- a/templates/about.html
+++ b/templates/about.html
@@ -53,7 +53,11 @@ html {
     <li><sitename style="color:white;">Travel Pal</sitename></li>
   <li><a href="/">Home</a></li>
   <li><a class="active">About</a></li>
-  <li><input type="text" placeholder="Search.." ></li>
+  <li>
+      <form action="", method="post">
+            {% csrf_token %}
+        <input id="location" placeholder="Enter State/Country.." type="text" name="location">
+        </form></li>
 </ul>
 
 <div class="about-section">
