--- a/templates/template.html
+++ b/templates/template.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Travel Pal</title>
     <style>
-        body {margin:0;}
+
+        body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
 
         ul
         {
@@ -62,6 +66,14 @@
           margin-right: 16px;
           font-size: 18px;
         }
+        li form {
+            position: absolute;
+            right: 0px;
+            border: none;
+            margin-right: 16px;
+            font-size: 18px;
+        }
+
     </style>
 </head>
 <body>
