--- a/templates/city.html
+++ b/templates/city.html
@@ -3,9 +3,7 @@
 {% block content %}
 
 <style>
-input {
-    display: none;
-}
+
 
 label {
     display: block;
@@ -42,7 +40,7 @@ input:checked + label + .content {
 <ul>
     <li><sitename style="color:white;">Travel Pal</sitename></li>
     <li><a href="">Home</a></li>
-    <li><a href="about">About</a></li>
+    <li><a href="../about">About</a></li>
     <li>
         <form action="", method="post">
             {% csrf_token %}
@@ -54,7 +52,7 @@ input:checked + label + .content {
 <form action = "" method = "POST">
     {% csrf_token %}
         <h1>{{ city }}</h1>
-        <input type="checkbox" id="restaurants" />
+        <input type="checkbox" id="restaurants" hidden />
         <label for="restaurants">Restaurants</label>
         <div class="content">
         {% for key, value in restaurants.items %}
@@ -65,7 +63,7 @@ input:checked + label + .content {
             </br>
         {% endfor %}
         </div>
-        <input type="checkbox" id="hotels" />
+        <input type="checkbox" id="hotels" hidden />
         <label for="hotels">Hotels</label>
         <div class="content">
         {% for key, value in hotels.items %}
@@ -76,7 +74,7 @@ input:checked + label + .content {
             </br>
         {% endfor %}
         </div>
-        <input type="checkbox" id="sights" />
+        <input type="checkbox" id="sights" hidden />
         <label for="sights">Sightseeing</label>
         <div class="content">
         {% for key, value in sights.items %}
