--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
 <ul>
     <li><sitename style="color:white;">Travel Pal</sitename></li>
     <li><a class="active">Home</a></li>
-    <li><a href="about">About</a></li>
+    <li><a href="../about">About</a></li>
     <li>
         <form action="", method="post">
             {% csrf_token %}
@@ -37,9 +37,7 @@
 
 <form action = "" method = "POST">
     {% csrf_token %}
-    <label for="location"><B>Location: </B></label>
-    <input id="location" type="text" name="location">
-    <input type="submit" value="OK">
+
     <h1>Your location is: {{ location }}</h1>
     <h2>Top cities in: {{ location }}</h2>
         {% for city in cities %}
