--- a/templates/template.html
+++ b/templates/template.html
@@ -59,6 +59,16 @@
         li input[type=text]
         {
           position: absolute;
+          right: 60px;
+          padding: 6px;
+          border: none;
+          margin-top: 8px;
+          margin-right: 16px;
+          font-size: 18px;
+        }
+        li input[type=submit]
+        {
+          position: absolute;
           right: 0px;
           padding: 6px;
           border: none;
