--- a/templates/city.html
+++ b/templates/city.html
@@ -3,9 +3,6 @@
 {% block content %}
 
 <style>
-input {
-    display: none;
-}
 
 label {
     display: block;
@@ -54,7 +51,7 @@ input:checked + label + .content {
 <form action = "" method = "POST">
     {% csrf_token %}
         <h1>{{ city }}</h1>
-        <input type="checkbox" id="restaurants" />
+        <input type="checkbox" id="restaurants" hidden/>
         <label for="restaurants">Restaurants</label>
         <div class="content">
         {% for key, value in restaurants.items %}
@@ -65,7 +62,7 @@ input:checked + label + .content {
             </br>
         {% endfor %}
         </div>
-        <input type="checkbox" id="hotels" />
+        <input type="checkbox" id="hotels" hidden/>
         <label for="hotels">Hotels</label>
         <div class="content">
         {% for key, value in hotels.items %}
@@ -76,7 +73,7 @@ input:checked + label + .content {
             </br>
         {% endfor %}
         </div>
-        <input type="checkbox" id="sights" />
+        <input type="checkbox" id="sights" hidden/>
         <label for="sights">Sightseeing</label>
         <div class="content">
         {% for key, value in sights.items %}
