--- a/templates/template.html
+++ b/templates/template.html
@@ -83,6 +83,9 @@
             margin-right: 16px;
             font-size: 18px;
         }
+        table {
+            width:100%
+        }
 
     </style>
 </head>
