--- a/templates/template.html
+++ b/templates/template.html
@@ -86,6 +86,11 @@
         table {
             width:100%
         }
+        img {
+            width: 100px;
+            height: 300px;
+        }
+
 
     </style>
 </head>
