--- a/templates/city.html
+++ b/templates/city.html
@@ -38,7 +38,7 @@ input:checked + label + .content {
 
 <ul>
     <li><sitename style="color:white;">Travel Pal</sitename></li>
-    <li><a href="">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="../about">About</a></li>
     <li>
         <form action="", method="post">
