--- a/templates/location.html
+++ b/templates/location.html
@@ -20,6 +20,13 @@
 .astext:hover {
     color:#04AA6D;
 }
+
+.footer {
+  padding: 0;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+}
 </style>
 
 <ul>
@@ -44,5 +51,21 @@
             </br>
         {% endfor %}
 </form>
+<table>
+    <tr>
+            <th>
+                <img src="https://wttc.org/DesktopModules/MVC/NewsArticleList/images/141_20201013185512_Consumer%20Survey%20Finds%2070%20Percent%20of%20Travelers%20Plan%20to%20Holiday%20in%202021.jpg" alt="" style="width:100%">
+            </th>
+            <th>
+                <img src="https://content.presspage.com/uploads/1376/1920_sustainabletravel.jpg?10000" alt="" style="width:100%">
+            </th>
+            <th>
+                <img src="https://www.traveloffpath.com/wp-content/uploads/2021/10/Encouraging-Travel-And-Hotel-Occupancy-Figures-Project-A-Busy-Winter-Of-Travel.jpg" alt="" style="width:100%">
+            </th>
+    </tr>
+</table>
+    <footer class="footer">
+        <h1>Adventure Awaits</h1>
+    </footer>
 
 {% endblock %}
